--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,18 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: People
+    url: /people/
+  - title: Papers
+    url: /papers/
+  - title: Code & Data
+    url: /codedata/
+  - title: Slides
+    url: /slides/
+  - title: Jobs
+    url: /jobs/
+  - title: Lab Manual
+    url: /manual/
+  - title: Teaching
+    url: /teaching/
+  - title: Press
+    url: /press/
