lab core values and papers

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@ main:
     #url: /slides/
     #- title: Jobs
     #url: /jobs/
-  - title: Lab Manual
-    url: /manual/
+  - title: Core Values
+    url: /corevalues/
     #- title: Teaching
     #url: /teaching/
     #- title: Press
