--- a/_config.yml
+++ b/_config.yml
@@ -10,20 +10,20 @@
 # Review documentation to determine if you should use `theme` or `remote_theme`
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
-# theme                  : "minimal-mistakes-jekyll"
+theme                    : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "dark" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
 title                    : "The Smith-Vidaurre Lab"
-title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
+title_separator          : "|"
+subtitle                 : "Michigan State University" # site tagline that appears below site title in masthead
 name                     : ""
-description              : "The Smith-Vidaurre Lab, Michigan State University, Integrative Biolgy & Computational Mathematics, Science, & Engineering"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+description              : "The Smith-Vidaurre Lab, Departments of Integrative Biolgy & Computational Mathematics, Science, & Engineering"
+url                      : "https://Smith-VidaurreLab.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/Smith-VidaurreLab" # the subpath of your site, e.g. "/blog"
+repository               : "Smith-VidaurreLab/Smith-VidaurreLab.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
@@ -151,8 +151,9 @@ footer:
       icon: "fab fa-fw fa-instagram"
       # url:
 
+# Make sure that all pages will be included
+include: ["_pages"]  
 
-include: ["_pages"] # TKTK I added this      
 # Reading Files
 include:
   - .htaccess
