--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   - title: Research Team
     url: /team/
-  - title: Papers
-    url: /papers/
+  - title: Publications
+    url: /publications/
   - title: Core Values
     url: /corevalues/
   - title: Join the Lab
