Updated research summary

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -113,7 +113,7 @@ categories:
           - text: Open-access data
             url: https://datadryad.org/stash/dataset/doi:10.5061/dryad.gn8qf6q
 
-    - title: "Yellow-naped Amazon (Amazona auropalliata) populations are markedly low and rapidly declining in Costa Rica and Nicaragua"
+    - title: "Yellow-naped Amazon (<em>Amazona auropalliata</em>) populations are markedly low and rapidly declining in Costa Rica and Nicaragua"
       authors:
       - Timothy F. Wright
       - Thomas C. Lewis
