Troubleshooting local deployment

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /team/
   - title: Publications
     url: /publications/
-  - title: Core Values
-    url: /corevalues/
+  - title: Lab Handbook
+    url: /handbook/
   - title: Join the Lab
     url: /opportunities/
