--- a/_config.yml
+++ b/_config.yml
@@ -18,11 +18,11 @@ minimal_mistakes_skin    : "contrast" # "default", "air", "aqua", "contrast", "d
 locale                   : "en-US"
 title                    : "The Smith-Vidaurre Lab"
 title_separator          : "|"
-subtitle                 : "Bioacoustics and Data Science" # site tagline that appears below site title in masthead
+subtitle                 : "Behavior IntegRated with Data Science (BIRDS) Lab" # site tagline that appears below site title in masthead
 name                     : ""
 description              : "The Smith-Vidaurre Lab, Departments of Integrative Biolgy & Computational Mathematics, Science, & Engineering"
 url                      : "https://Smith-VidaurreLab.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/Smith-VidaurreLab" # the subpath of your site, e.g. "/blog"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "Smith-VidaurreLab/Smith-VidaurreLab.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
