--- a/_data/events.yml
+++ b/_data/events.yml
@@ -2,5 +2,5 @@
   date: 2024 August 28
 - description: The lab's first R package is online! Developed with former ACRES REU student Ari Cross and collaborator Dr. Vanessa Ferdinand, <a href=https://github.com/gsvidaurre/paRsynth>paRsynth</a> uses Parsons code to sonify character strings and generate synthetic frequency-modulated vocalizations
   date: 2024 August 06
-- description: Congratulations to Ari Cross! Ari finished her REU in the lab through MSU <a href=https://icer-acres.msu.edu/>ACRES</a>, and won an Honorable Mention for her final talk
+- description: Congratulations to Arlena (Ari) Cross! Ari finished her REU in the lab through the MSU <a href=https://icer-acres.msu.edu/>ACRES</a> program, and won an Honorable Mention for her final talk
   date: 2024 July 26
