Final updates for now

--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,6 +1,8 @@
 - description: Welcome Dr. Coppinger, Raneem, Summer, and Alexandra! Dr. Brittany Coppinger is a biologist joining the lab as a postdoctoral researcher in late August. Raneem Samman is a data scientist and biologist joining the lab as a research assistant in late August. Summer Eckhardt is a biologist and joins the lab as a graduate student in late August. Alexandra Juárez is a biologist joining the lab as a research assistant in early September.
   date: 2024 August 28
-- description: The lab's first R package is online! Developed with former ACRES REU student Ari Cross and collaborator Dr. Vanessa Ferdinand, <a href=https://github.com/gsvidaurre/paRsynth>paRsynth</a> uses Parsons code to sonify character strings and generate synthetic frequency-modulated vocalizations
+- description: New collaborative paper on <a href=https://royalsocietypublishing.org/doi/10.1098/rspb.2024.0659>vocal cultural change</a> in endangered Amazon parrot populations published in Proceedings of the Royal Society B! See recent media coverage <a href=https://www.popsci.com/environment/parrot-accents/>here</a> and <a href=https://www.earth.com/news/birds-have-regional-accents-just-like-humans/>here</a>.
+  date: 2024 August 21
+- description: The lab's first R package is online! Developed with former ACRES REU student Ari Cross and collaborator Dr. Vanessa Ferdinand, <a href=https://github.com/gsvidaurre/paRsynth>paRsynth</a> uses Parsons code to sonify character strings and generate synthetic frequency-modulated vocalizations.
   date: 2024 August 06
-- description: Congratulations to Arlena (Ari) Cross! Ari finished her REU in the lab through the MSU <a href=https://icer-acres.msu.edu/>ACRES</a> program, and won an Honorable Mention for her final talk
+- description: Congratulations to Arlena (Ari) Cross! Ari finished her REU in the lab through the MSU <a href=https://icer-acres.msu.edu/>ACRES</a> program, and won an Honorable Mention for her final talk.
   date: 2024 July 26
