--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ subtitle                 : "Behavior IntegRated with Data Science (BIRDS) Lab" #
 name                     : ""
 description              : "The Smith-Vidaurre Lab, Departments of Integrative Biolgy & Computational Mathematics, Science, & Engineering"
 url                      : "https://Smith-VidaurreLab.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Smith-VidaurreLab/Smith-VidaurreLab.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
