--- a/_data/team.yml
+++ b/_data/team.yml
@@ -4,7 +4,7 @@ members:
     image_path: /assets/images/team/gsv.JPG
     title: Principal Investigator
     subject: 1855 Assistant Professor
-    interests: Knitting, cycling, family adventures, rockhounding, reading, exploring new cuisine
+    interests: Cycling, family adventures, rock hunting, reading, knitting, exploring new cuisine
     aliases:
       - Grace Smith-Vidaurre (she/her)
   - name: Dr. Brittany Coppinger (she/her)
