--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,4 +1,4 @@
-- description: Ari Cross' summer research in the lab was highlighted by the College of Natural Science in this <a href=https://natsci.msu.edu/news/2024-08-summer-reu-students-use-computation-to-solve-multidisciplinary-challenges%20.aspx><article</a> about the Advanced Computational Research Experience (ACRES) NSF REU program
+- description: Ari Cross' summer research in the lab was highlighted by the College of Natural Science in this <a href=https://natsci.msu.edu/news/2024-08-summer-reu-students-use-computation-to-solve-multidisciplinary-challenges%20.aspx>article</a> about the Advanced Computational Research Experience (ACRES) NSF REU program
   date: 2024 August 30
 - description: Welcome Dr. Coppinger, Raneem, Summer, and Alexandra! Dr. Brittany Coppinger is a biologist joining the lab as a postdoctoral researcher in late August. Raneem Samman is a data scientist and biologist joining the lab as a research assistant in late August. Summer Eckhardt is a biologist and joins the lab as a graduate student in late August. Alexandra Juárez is a biologist joining the lab as a research assistant in early September.
   date: 2024 August 28
