--- a/_data/team.yml
+++ b/_data/team.yml
@@ -29,13 +29,13 @@ members:
     interests: Singing and performing, movies and anime, hanging with family and friends
     aliases:
       - Alexandra Juárez (she/they)
-  - name: Raneem Samman (t/he/y)
+  - name: Raneem Samman (they/them)
     image_path: /assets/images/team/rs.jpeg
     title: Research Assistant
     subject: Computational Bioacoustics
     interests: Soccer and other sports, card and video games, cooking with friends and family
     aliases:
-      - Raneem Samman (t/he/y)
+      - Raneem Samman (they/them)
 
 alumni:
   - name: Arlena (Ari) Cross
