--- a/_data/team.yml
+++ b/_data/team.yml
@@ -37,9 +37,10 @@ members:
     aliases:
       - Raneem Samman (they/them)
 
-alumni and past lab affiliates:
+alumni:
   - name: Arlena (Ari) Cross
     url: https://www.linkedin.com/in/arlena-cross-291432227/
     now: Data scientist and psychologist, Smith College
   - name: Madison Honore
+    url:
     now: Masters in Data Science Graduate Student
